# NeoTrix

./: .anchored-summary.md  .background_monitor.sh  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AGENTS.md.bak  ARCHITECTURE_GAP_ANALYSIS.md  ARCHITECTURE_REDESIGN.md  ARCHITECTURE_V2.md  Cargo.lock.bak  Cargo.toml  DEEP_ANALYSIS_4D.md  DESIGN_INTENT.md  DESIGN_PET.md  Dockerfile  EVOLUTION_ITERATION.md  EVOLUTION_PLAN.md  EVOLUTION_ROADMAP.md  ITERATION_PLAN.md  META_COGNITIVE_SELF_REVIEW.md  Makefile  README.md  RULES.md  SELF.md  TODO.md  TODO.yml  TODO_SYNC.md  UNSAFE_AUDIT.md  VSA_COMPACT_MEMORY.md  WARP_CLONE_DESIGN.md  butterfly_valves.json  butterfly_valves_enriched.json  cliff.toml  data_source_analysis_report.md  data_source_deep_analysis.md  deny.toml  desktop-app-mockup.html  docker-compose.dev.yml  docker-compose.yml  (+23 more)
crates/agent-core/: Cargo.toml
crates/agent-core/src/: card.rs  lib.rs  registry.rs  server.rs  task.rs
crates/agent-core/tests/: smoke.rs
crates/agent-registry/: Cargo.toml
crates/agent-registry/src/: lib.rs  main.rs
crates/ghost-mvp-agent/: Cargo.toml
crates/ghost-mvp-agent/src/: a2a.rs  config.rs  engine.rs  lib.rs  main.rs  scheduler.rs  state.rs
crates/neotrix-body/: Cargo.toml
crates/neotrix-body/src/: lib.rs
crates/neotrix-bridge/: Cargo.toml
crates/neotrix-bridge/src/: lib.rs  types.rs
crates/neotrix-evolution/: Cargo.toml
crates/neotrix-evolution/src/: lib.rs  main.rs
crates/neotrix-mind/: Cargo.toml
crates/neotrix-mind/src/: error.rs  lib.rs  shared_types.rs  time.rs  traits.rs
crates/neotrix-proxy/: Cargo.toml
crates/neotrix-proxy-kernel/: Cargo.toml
crates/neotrix-proxy-kernel/src/: httpproxy.rs  lib.rs  node.rs  socks.rs  telemetry.rs
crates/neotrix-proxy-pool/: Cargo.toml
crates/neotrix-proxy-pool/src/: main.rs
crates/neotrix-proxy/src/: main.rs
crates/neotrix-self/: Cargo.toml
crates/neotrix-self/src/: constitution.rs  evolution.rs  first_person.rs  identity.rs  lib.rs  persistence.rs  sovereignty.rs
crates/neotrix-tun/: Cargo.toml
crates/neotrix-tun/src/: lib.rs  stack.rs  tun.rs
crates/neotrix-types/: Cargo.toml
crates/neotrix-types/src/: lib.rs
crates/nt-migrate/: Cargo.toml
crates/nt-migrate/src/: lib.rs  main.rs
crates/nt-proxy-daemon/: Cargo.toml
crates/nt-proxy-daemon/src/: circuit.rs  dns.rs  guard.rs  health.rs  http.rs  main.rs  metrics.rs  mux.rs  obfuscation.rs  obfuscation_test.rs  picker.rs  pool.rs  relay.rs  socket.rs  socks5.rs  ssrf.rs  timing_obfuscation.rs  tls.rs  traffic_shape.rs
crates/nt-segstore/: Cargo.toml
crates/nt-segstore/src/: compaction.rs  lib.rs  null_drift.rs
crates/nt-sub-fetcher/: Cargo.toml
crates/nt-sub-fetcher/src/: main.rs
neotrix-core/: Cargo.toml  EVOLUTION_ROADMAP.md  librust_out.rlib  libtest.rlib  summary.md
neotrix-core/.cargo/: config.toml
neotrix-core/benches/: adversarial_bench.rs  core_bench.rs  real_tasks.rs  seal_loop.rs  vector_ops.rs  vsa_bench.rs
neotrix-core/examples/: absorption_loop_200.rs  auto_evolve.rs  build_real_world.rs  chinese_knowledge_inject.rs  civilization_replica.rs  complete_injection.rs  comprehensive_earth_mine.rs  consciousness_kernel.rs  cortex_mine.rs  deep_web_miner.rs  depth_methodology.rs  earth_civilization_mine.rs  earth_dimension_chain.rs  earth_mine_quick.rs  esoteric_chinese_knowledge.rs  evolve.rs  evolve_test.rs  expand_world_knowledge.rs  explore_live.rs  final_comprehensive.rs  github_deep_discover.rs  github_explorer.rs  github_round3.rs  god_level_knowledge.rs  inject_knowledge_json.rs  knowledge_distiller.rs  knowledge_engine_mine.rs  knowledge_mine.rs  process_url.rs  proxy.rs  quick_start.rs  silicon.rs  todo_parallel.rs  unified_exploration_loop.rs  v2_quick_start.rs  web_mine_deep.rs
neotrix-core/examples/demo/: main.rs  mcp_tools_demo.rs  reasoning_brain_demo.rs  seal_loop_demo.rs
neotrix-core/ne_src/: evolve.ne  stdlib.ne  test.ne
neotrix-core/review_rules/: go.md  java.md  python.md  rust.md  typescript.md
neotrix-core/src/: config.rs  lib.rs  main.rs  rules.rs  transit.rs  tui.rs  web.rs
neotrix-core/src/agent/: absorb.rs  adapters.rs  agent_bus.rs  agent_workflow.rs  blackboard.rs  bridge.rs  channel.rs  cognitive_memory.rs  credit_assignment.rs  decoder.rs  deps.rs  executor.rs  experience_pool.rs  hooks.rs  memory_optimizer.rs  mod.rs  persona.rs  playbook.rs  proxy.rs  step_generator.rs  team.rs  tunnel.rs  workflow.rs  worktree.rs
neotrix-core/src/cli/: approval.rs  cost_tracker.rs  jsonl_stream.rs  laws.rs  mod.rs  permission_profiles.rs  progress.rs  sandbox.rs  sandboxed_shell.rs  shield_enforcer.rs
neotrix-core/src/constitution/: mod.rs
neotrix-core/src/core/: edit.rs  mod.rs  nt_core_absorb.rs  nt_core_abstr.rs  nt_core_accessor.rs  nt_core_cap.rs  nt_core_cdwm.rs  nt_core_conn.rs  nt_core_crt.rs  nt_core_data_types.rs  nt_core_e8.rs  nt_core_e8_model.rs  nt_core_edit.rs  nt_core_embed.rs  nt_core_error.rs  nt_core_graceful.rs  nt_core_graph.rs  nt_core_health.rs  nt_core_hex.rs  nt_core_idempotency.rs  nt_core_iit_phi.rs  nt_core_infer.rs  nt_core_iter.rs  nt_core_iter_agent.rs  nt_core_jepa.rs  nt_core_kron.rs  nt_core_llm_provider.rs  nt_core_llm_router.rs  nt_core_mcp.rs  (+25 more)
neotrix-core/test_suites/: core_consciousness.nt  core_consciousness_first_person_ref.nt  core_consciousness_specious_present.nt  core_consciousness_vsa_tag.nt  core_context.nt  core_experience.nt  core_gwt_resonance.nt  core_hcube_cross_modal.nt  core_hcube_vsa.nt  core_hcube_vsa_quantized.nt  core_negentropy.nt  core_self_metacognitive_evaluator.nt  cross_modal.nt  demo_pipeline.nt  vsa_basics.ne  vsa_engine.nt  vsa_quantized.nt
neotrix-core/tests/: td_jepa_test.rs  test_stealth_net_e2e.rs
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html  node_modules  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src-tauri/plugins/: manager.rs
src-tauri/src/: browser_host.rs  consciousness_bridge.rs  git_integration.rs  lib.rs  main.rs  permission_dialog.rs  projects.rs
(+2964 files in other folders)
