[workspace]
members = [
    "neotrix-core",
    "src-tauri",
    "crates/neotrix-types",
]

resolver = "2"

[workspace.package]
version = "0.18.0"
edition = "2021"
rust-version = "1.81"
authors = ["NeoTrix Team"]
license = "MIT"
repository = "https://github.com/neotrix/neotrix"
description = "NeoTrix - Self-evolving reasoning kernel with 18 stages of neural architecture"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.bench]
inherits = "release"
debug = true
