[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared A2A agent scaffolding: server skeleton, AgentCard, task routing, registry client"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
