[package]
name = "agent-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Central agent registry: capability-based agent discovery and health monitoring"

[lib]
name = "agent_registry"
path = "src/lib.rs"

[[bin]]
name = "agent-registry"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = { workspace = true }
agent-core = { path = "../agent-core" }
