[package]
name = "neotrix-evolution"
version = "0.18.0"
edition = "2021"

[lib]
name = "neotrix_evolution"
path = "src/lib.rs"

[dependencies]
neotrix = { path = "../../neotrix-core" }
neotrix-bridge = { path = "../neotrix-bridge" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = "0.4"
