[package]
name = "neotrix-mind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "NeoTrix — mind layer (scheduler, memory, reasoning, perception)"

[dependencies]
neotrix-self = { path = "../neotrix-self" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = "0.4"
rand = "0.8"
