[package]
name = "neotrix-proxy-pool"
version = "0.18.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"
neotrix-proxy-kernel = { path = "../neotrix-proxy-kernel" }
log = "0.4"
lazy_static = "1"
futures = "0.3"
env_logger = "0.11"
rustls = "0.23"

