[package]
name = "neotrix-types"
version.workspace = true
edition.workspace = true

[lib]
name = "neotrix_types"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true, optional = true }
hmac = "0.12"
sha2 = "0.10"
quick-xml = "0.31"
zip = { version = "2", default-features = false, features = ["deflate", "time"] }
lru = "0.12"
hex = "0.4"
log = "0.4"
rand = "0.8"
holon = { git = "https://github.com/watmin/holon-rs", optional = true }
rkyv = { version = "0.8", features = ["std", "bytecheck"], optional = true }
memmap2 = { version = "0.9", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

[features]
simd-vsa = ["dep:holon"]
rkyv-storage = ["dep:rkyv", "dep:memmap2", "dep:dirs"]
e8-theory = []
# full enables HTTP fetching in nt_core_accessor via reqwest
full = ["dep:reqwest"]
